datasource db {
  provider = "postgresql"
  url      = env("DB_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

generator docs {
  provider = "node node_modules/prisma-docs-generator"
}

generator jsonSchema {
  provider = "prisma-json-schema-generator"
}

generator markdown {
  provider = "prisma-markdown"
  output   = "./README.md"
}

model Task {
  id          String   @id
  title       String   @default("")
  description String   @default("")
  completed   Boolean  @default(false)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  list        List     @relation(fields: [listId], references: [id])
  listId      String
}

model List {
  id          String   @id
  title       String   @default("")
  description String   @default("")
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  user        User     @relation(fields: [userId], references: [id])
  userId      String
  Task        Task[]
}

model User {
  id        String   @id
  username  String   @default("")
  password  String   @default("")
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  List      List[]
}
