//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Task {
  id String [pk]
  title String [not null, default: '']
  description String [not null, default: '']
  completed Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  list List [not null]
  listId String [not null]
}

Table List {
  id String [pk]
  title String [not null, default: '']
  description String [not null, default: '']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [not null]
  Task Task [not null]
}

Table User {
  id String [pk]
  username String [not null, default: '']
  password String [not null, default: '']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  List List [not null]
}

Ref: Task.listId > List.id

Ref: List.userId > User.id